--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -32,7 +32,7 @@
       <td th:text="${logError.description}"></td>
       <td th:text="${logError.date}"></td>
       <td th:text="${logError.tourName}"></td>
-      <td><a th:href="@{${logError.tourLink}}" target="_blank" th:text="${logError.tourLink}"></a></td>
+      <td><a th:href="@{${logError.tourLink}}" target="_blank">тур</a></td>
     </tr>
     </tbody>
   </table>
