--- a/src/main/resources/templates/selectors.html
+++ b/src/main/resources/templates/selectors.html
@@ -32,6 +32,7 @@
                         <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Стоимость:<br></strong> <span th:text="${selector.priceSelector}"></span></li>
                         <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Начало тура:<br></strong> <span th:text="${selector.tourStartDateSelector}"></span></li>
                         <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Адрес отеля:<br></strong> <span th:text="${selector.hotelAddressSelector}"></span></li>
+                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Лого сайта:<br></strong> <span th:text="${selector.siteLogo}"></span></li>
                     </ul>
 
                     <!-- Кнопка изменения -->
