--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,7 +1,9 @@
 <div th:fragment="nav">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/tours">Информационный сайт</a>
+            <a class="navbar-brand" href="/tours">
+                <img src="https://i.ibb.co/GxR4LDJ/logo.png" alt="logo" style="height: 40px;">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -18,7 +20,7 @@
                         <a class="nav-link" href="/errors">Лог ошибок</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/addLinkSelector">Добавить для парсинга</a>
+                        <a class="nav-link" href="/addLinkSelector">Добавить тур</a>
                     </li>
                 </ul>
             </div>
