--- a/src/main/resources/templates/tour-list.html
+++ b/src/main/resources/templates/tour-list.html
@@ -16,41 +16,24 @@
 <div class="container mt-4">
     <h1 class="text-center">All Tours</h1>
     <div class="row mt-4 gy-4">
-        <!-- Tour Card with Slider -->
         <div th:each="tour : ${tours}" class="col-md-4">
             <div class="card bg-secondary text-light h-100">
-                <!-- Carousel for Tour -->
-                <div th:id="'carouselTour' + ${tour.id}" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <!-- Динамически добавляем изображения для каждого тура -->
-                        <div th:each="image, iterStat : ${tour.images}" class="carousel-item"
-                             th:classappend="${iterStat.index == 0} ? ' active' : ''">
-                            <img th:src="@{${image}}" class="d-block w-100" alt="Tour Image"/>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button"
-                            th:data-bs-target="'#carouselTour' + ${tour.id}" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button"
-                            th:data-bs-target="'#carouselTour' + ${tour.id}" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
                 <!-- Card Body -->
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-start">
+                        <!-- Логотип -->
+                        <div class="logo-container">
+                            <img th:src="${tour.logo}" alt="Логотип" class="logo">
+                        </div>
                         <h5 class="card-title" th:text="${tour.hotelName}"></h5>
                         <span class="badge px-2 py-1"
                               th:style="'background-color: ' + ${tour.priceColor} + '; color: white;'"
                               th:text="${#numbers.formatDecimal(tour.currentPrice, 0, 'POINT', 0, 'POINT')} + ' ₽'"></span>
                     </div>
-                    <p class="card-text">A short description of the tour or hotel.</p>
+                    <p class="card-text"></p>
                     <div class="d-flex justify-content-between">
-                        <a th:href="@{/tour/{id}(id=${tour.id})}" class="btn btn-outline-light btn-sm">Подробнее</a>
-                        <a th:href="${tour.link.link}" class="btn btn-outline-light btn-sm">Ссылка на тур</a>
+                        <a th:href="@{/tour/{id}(id=${tour.id})}" class="btn btn-outline-light btn-sm" target="_blank">Подробнее</a>
+                        <a th:href="${tour.link.link}" class="btn btn-outline-light btn-sm" target="_blank">Ссылка на тур</a>
                         <a th:href="@{/tour/delete/{id}(id=${tour.id})}" class="btn btn-outline-danger btn-sm"
                            onclick="return confirm('Вы уверены, что хотите удалить этот тур?');">Удалить</a>
                     </div>
@@ -59,6 +42,22 @@
         </div>
     </div>
 </div>
+
+<style>
+    .logo-container {
+        max-width: 50px;
+        max-height: 50px;
+        margin-right: 10px;
+    }
+
+    .logo {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+        border-radius: 8px;
+    }
+</style>
+
 
 
 
