--- a/src/main/resources/templates/tour-list.html
+++ b/src/main/resources/templates/tour-list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tour Details</title>
+    <title>Информация о турах</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
@@ -14,23 +14,46 @@
 <div th:replace="~{fragments/nav}"></div>
 
 <div class="container mt-4">
-    <h1 class="text-center">All Tours</h1>
+    <h1 class="text-center">Все туры</h1>
     <div class="row mt-4 gy-4">
         <div th:each="tour : ${tours}" class="col-md-4">
             <div class="card bg-secondary text-light h-100">
+
+                <!-- Carousel for Tour -->
+                <div th:id="'carouselTour' + ${tour.id}" class="carousel slide position-relative" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <!-- Динамически добавляем изображения для каждого тура -->
+                        <div th:each="image, iterStat : ${tour.images}" class="carousel-item"
+                             th:classappend="${iterStat.index == 0} ? ' active' : ''">
+                            <img th:src="@{${image}}" class="d-block w-100" alt="Tour Image"/>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button"
+                            th:data-bs-target="'#carouselTour' + ${tour.id}" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button"
+                            th:data-bs-target="'#carouselTour' + ${tour.id}" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
+                    <!-- Логотип -->
+                    <div class="logo-container position-absolute">
+                        <img th:src="${tour.logo}" alt="Логотип" class="logo">
+                    </div>
+                </div>
+
                 <!-- Card Body -->
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-start">
-                        <!-- Логотип -->
-                        <div class="logo-container">
-                            <img th:src="${tour.logo}" alt="Логотип" class="logo">
-                        </div>
                         <h5 class="card-title" th:text="${tour.hotelName}"></h5>
                         <span class="badge px-2 py-1"
                               th:style="'background-color: ' + ${tour.priceColor} + '; color: white;'"
                               th:text="${#numbers.formatDecimal(tour.currentPrice, 0, 'POINT', 0, 'POINT')} + ' ₽'"></span>
                     </div>
-                    <p class="card-text"></p>
+                    <p class="card-text" th:text="${tour.tourStartDate}"></p>
                     <div class="d-flex justify-content-between">
                         <a th:href="@{/tour/{id}(id=${tour.id})}" class="btn btn-outline-light btn-sm" target="_blank">Подробнее</a>
                         <a th:href="${tour.link.link}" class="btn btn-outline-light btn-sm" target="_blank">Ссылка на тур</a>
@@ -40,23 +63,10 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
-<style>
-    .logo-container {
-        max-width: 50px;
-        max-height: 50px;
-        margin-right: 10px;
-    }
-
-    .logo {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain;
-        border-radius: 8px;
-    }
-</style>
 
 
 
