--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -14,6 +14,12 @@
                         <a class="nav-link" href="/tours">Главная страница</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/archive">Архивные туры</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/allLink">Ссылки для отслеживания</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/selector">Селекторы</a>
                     </li>
                     <li class="nav-item">
