--- a/src/main/resources/templates/arch-tour-list.html
+++ b/src/main/resources/templates/arch-tour-list.html
@@ -14,7 +14,7 @@
 <div th:replace="~{fragments/nav}"></div>
 
 <div class="container mt-4">
-    <h1 class="text-center">Все туры</h1>
+    <h1 class="text-center">Архивные туры</h1>
     <div class="row mt-4 gy-4">
         <div th:each="tour : ${tours}" class="col-md-4">
             <div class="card bg-secondary text-light h-100">
@@ -46,7 +46,6 @@
                 </div>
 
                 <!-- Card Body -->
-
                 <div class="card-body d-flex flex-column">
                     <div class="d-flex justify-content-between align-items-start">
                         <h5 class="card-title" th:text="${tour.hotelName}"></h5>
@@ -59,11 +58,13 @@
                     <div class="mt-auto d-flex justify-content-between">
                         <a th:href="@{/tour/{id}(id=${tour.id})}" class="btn btn-outline-light btn-sm" target="_blank">Подробнее</a>
                         <a th:href="${tour.link.link}" class="btn btn-outline-light btn-sm" target="_blank">Ссылка на тур</a>
-                        <a th:href="@{/tour/archive/{id}(id=${tour.id})}" class="btn btn-outline-warning btn-sm">В архив</a>
+                        <a th:href="@{/archive/{id}(id=${tour.id})}" class="btn btn-outline-warning btn-sm">Отслеживать</a>
                         <a th:href="@{/tour/delete/{id}(id=${tour.id})}" class="btn btn-outline-danger btn-sm"
                            onclick="return confirm('Вы уверены, что хотите удалить этот тур?');">Удалить</a>
                     </div>
                 </div>
+
+
             </div>
         </div>
 
